# jinja2-embedded

./: .pre-commit-config.yaml  README.md  README.rst  pyoxidizer.bzl  pyproject.toml
.github/: python-package.yml  python-publish.yml
.github/workflows/: pyoxidizer.yml  python-package.yml
src/jinja2_embedded/: __init__.py  loaders.py
tests/: conftest.py  test_loader.py
tests/test_module/: pyproject.toml
tests/test_module/src/test_module/templates/: syntaxerror.html
tests/test_module/src/test_module/templates/foo/bar/: x.html
