[project]
name = "jinja2-embedded"
version = "0.1.0"
description = "Jinja2 Loader for embedded Python runtimes"
authors = [{ name = "GPla", email = "36087062+GPla@users.noreply.github.com" }]
dependencies = ["jinja2>=3,<4"]
readme = "README.md"
requires-python = ">= 3.8"

[project.optional-dependencies]
tests = ["pytest>=8.2.0", "pytest-cov>=5.0.0", "pyoxidizer>=0.24.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pyoxidizer>=0.24.0",
    "ipykernel>=6.29.4",
    "pre-commit>=3.7.1",
    "mypy>=1.10.0",
]

[tool.rye.workspace]
members = ['src', 'tests/test_module']

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jinja2_embedded"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 79
skip-string-normalization = true

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true
